--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ a {
 }
 /* Container */
 .container {
-  width: 1230px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -70,9 +70,8 @@ a {
 /* Site-nav */
 
 .site-nav.item {
-  margin-right: auto;
-  margin-top: 32px;
-  margin-bottom: 32px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .site-nav.item:last-child {
   margin-right: 0px;
@@ -116,8 +115,6 @@ a {
   margin-left: 50px;
 }
 .contacts-nav {
-  display: flex;
-  margin-left: auto;
 
   color: var(--primary-text-color);
   font-size: 14px;
@@ -188,7 +185,8 @@ a {
   line-height: 1.7;
   text-transform: uppercase;
   padding: 0;
-  margin: 0;
+  margin-bottom: 10px;
+  margin-top: 0;
 }
 .section-text {
   font-weight: 400;
